--- a/web1/src/app/company-payment/payment/payment.component.html
+++ b/web1/src/app/company-payment/payment/payment.component.html
@@ -155,9 +155,9 @@
                                                 <th>Invoice No</th>
                                                 <th>Received At</th>
                                                 <th>Purchase Date</th>
-                                                <th>GST No</th>
+                                                <th>TAX No</th>
                                                 <th>Discount</th>
-                                                <th>GST Amount</th>
+                                                <th>TAX Amount</th>
                                                 <th>Payment Status</th>
                                                 <th>Invoice Amount</th>
                                                 <th>Due Amount</th>
