--- a/web1/src/app/inventory/fitter/fitter.component.html
+++ b/web1/src/app/inventory/fitter/fitter.component.html
@@ -83,11 +83,11 @@
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>GST No</mat-label>
+                                                <mat-label>TAX No</mat-label>
                                                 <input matInput name="GSTNo" [(ngModel)]="data.GSTNo"
                                                     (ngModelChange)="data.GSTNo = onChange($event)" #GSTNocontrol>
                                                 <mat-error>
-                                                    GST No is required
+                                                    TAX No is required
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
