--- a/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web1/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -198,8 +198,8 @@
                                                     <th>Supplier</th>
                                                     <th>Unit Price</th>
                                                     <th>Dis%</th>
-                                                    <th>GST%</th>
-                                                    <th>GST Type</th>
+                                                    <th>TAX%</th>
+                                                    <th>TAX Type</th>
                                                     <th>Retail Price</th>
                                                     <th>WholeSale Price</th>
                                                 </tr>
