--- a/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web1/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -184,8 +184,8 @@
                                                     <th>BarCode</th>
                                                     <th>UnitPrice</th>
                                                     <th>Discount</th>
-                                                    <th>GST</th>
-                                                    <th>GSTType</th>
+                                                    <th>TAX%</th>
+                                                    <th>TAXType</th>
                                                     <th>RetailPrice</th>
                                                     <th>WholeSalePrice</th>
                                                     <th>ShopName</th>
