--- a/web1/src/app/inventory/preorder-list/preorder-list.component.html
+++ b/web1/src/app/inventory/preorder-list/preorder-list.component.html
@@ -62,11 +62,11 @@
                                                     <th>ReceivedAt</th>
                                                     <th>PurchaseDate</th>
                                                     <!-- <th style="text-align: left;">PaymentStatus</th> -->
-                                                    <th>GSTNo</th>
+                                                    <th>TAXNo</th>
                                                     <th>Quantity</th>
                                                     <th>InvoiceAmount</th>
                                                     <th>Discount</th>
-                                                    <th>GSTAmount</th>
+                                                    <th>TAXAmount</th>
                                                     <th>CreatedBy</th>
                                                     <th>UpdatedBy</th>
                                                 </tr>
