--- a/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -60,9 +60,9 @@
                             <th>Quantity</th>
                             <th>Discount</th>
                             <th>Subtotal</th>
-                            <th>GSTAmount</th>
+                            <th>TAXAmount</th>
                             <th>InvoiceAmount</th>
-                            <th>GSTNo</th>
+                            <th>TAXNo</th>
                             <th>ReceivedAt</th>
                             <th>CreatedBy</th>
                             <th>UpdatedBy</th>
