--- a/web1/src/app/sale/bill-list/bill-list.component.html
+++ b/web1/src/app/sale/bill-list/bill-list.component.html
@@ -110,7 +110,7 @@
                           <th>Paid</th>
                           <th>Balance</th>
                           <th>Discount</th>
-                          <th>GST</th>
+                          <th>TAX </th>
                           <th>TrayNo</th>
                           <th>Shop</th>
                           <th>Cust_SRNo</th>
