--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -7,7 +7,7 @@
                     <div class="header">
                         <div class="row">
                             <div class="col-lg-1 col-md-2 col-5">
-                                <h4>Customer Info </h4>
+                                <h4>Customer <b>{{this.data.Category}}</b> </h4>
                             </div>
                             <div class="col-lg-2 col-md-4 col-7 mr-md-2 mr-0 ms-md-auto"
                                 style="display: inherit; height: 20px;margin-top: 1px;color: black;">
