--- a/web1/src/app/admin/company.component.html
+++ b/web1/src/app/admin/company.component.html
@@ -98,7 +98,7 @@
                                         </div>
                                         <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>GST No</mat-label>
+                                                <mat-label>GST/VAT No</mat-label>
                                                 <input matInput name="GSTNo" [(ngModel)]="data.GSTNo" #GSTNocontrol>
                                             </mat-form-field>
                                         </div>
