--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -101,11 +101,11 @@
                           <th>ReceivedAt</th>
                           <th>PurchaseDate</th>
                           <th>PaymentStatus</th>
-                          <th>GSTNo</th>
+                          <th>TAXNo</th>
                           <th>Quantity</th>
                           <th>InvoiceAmount</th>
                           <th>Discount</th>
-                          <th>GSTAmount</th>
+                          <th>TAXAmount</th>
                           <th>CreatedBy</th>
                           <th>UpdatedBy</th>
                         </tr>
