--- a/web1/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web1/src/app/inventory/search-barcode/search-barcode.component.html
@@ -143,7 +143,7 @@
                                                     <th class="text-left">SupplierName</th>
                                                     <th class="text-left">RetailPrice</th>
                                                     <th class="text-left">WholeSalePrice</th>
-                                                    <th class="text-left">GSTType</th>
+                                                    <th class="text-left">TAXType</th>
                                                 </tr>
                                             </thead>
                                             <tbody class="text-center">
