--- a/web1/src/app/inventory/supplier/supplier.component.html
+++ b/web1/src/app/inventory/supplier/supplier.component.html
@@ -96,8 +96,8 @@
                                         <th>PhoneNo</th>
                                         <th>Address</th>
                                         <th>Email</th>
-                                        <th>GSTType</th>
-                                        <th>GST/VAT NO.</th>
+                                        <th>TAXType</th>
+                                        <th>TAX NO.</th>
                                         <th>ContactPerson</th>
                                         <th>CreatedBy</th>
                                         <th>UpdatedBy</th>
@@ -217,7 +217,7 @@
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-6 col-6 mb-0">
                             <mat-form-field class="example-full-width mb-0">
-                                <mat-label>GST/VAT No</mat-label>
+                                <mat-label>TAX No.</mat-label>
                                 <input matInput name="GSTNo" [(ngModel)]="data.GSTNo"
                                     (ngModelChange)="data.GSTNo = onChange($event)"  #GSTNocontrol>
                                     <!-- pattern="^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$"  -->
