--- a/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.html
+++ b/web1/src/app/po/fitter-invoice-list/fitter-invoice-list.component.html
@@ -61,7 +61,7 @@
                                 <i class="fas fa-info-circle ms-1" data-mdb-toggle="modal"
                                   data-mdb-target="#exampleModal"> </i>
                               </button>
-                               Total GSTAmount :  </span>
+                               Total TAXAmount :  </span>
                               <span style="color:#232323;font-size:15px;font-weight:bold;">{{this.TotalGSTAmount}}</span>
                             </div>
                             <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
@@ -92,9 +92,9 @@
                                             <th>ReceivedAt</th>
                                             <th>PurchaseDate</th>
                                             <th>PaymentStatus</th>
-                                            <th>GSTPercentage</th>
-                                            <th>GSTAmount</th>
-                                            <th>GSTType</th>
+                                            <th>TAXPercentage</th>
+                                            <th>TAXAmount</th>
+                                            <th>TAXType</th>
                                             <th>Invoice Amount</th>
                                           </tr>
                                       </thead>
@@ -165,7 +165,7 @@
 <!--ProductExpiry model -->
 <ng-template #content role="document" let-modal>
   <div class="modal-header" style="height: 50px;">
-      <h3 class="modal-title header pt-2" id="exampleModalLabel">GST Amount List</h3>
+      <h3 class="modal-title header pt-2" id="exampleModalLabel">TAX Amount List</h3>
       <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
@@ -174,8 +174,8 @@
               style="border: 2px solid #fff !important;">
               <thead>
                   <tr>
-                      <th>GSTType</th>
-                      <th>GSTAmount</th>
+                      <th>TAXType</th>
+                      <th>TAXAmount</th>
                   </tr>
               </thead>
               <tbody>
