--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -103,7 +103,7 @@
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
                         <mat-form-field class="example-full-width mb-0">
-                          <mat-label>GST Type</mat-label>
+                          <mat-label>TAX Type</mat-label>
                           <mat-select name="GSTType" [(ngModel)]="inventory.GSTType" #singleSelect>
                             <mat-option [value]="0">All</mat-option>
                             <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}
@@ -113,7 +113,7 @@
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
                         <mat-form-field class="example-full-width mb-0">
-                          <mat-label>GSTPercentage</mat-label>
+                          <mat-label>TAX Percentage</mat-label>
                           <mat-select name="GSTPercentage" [(ngModel)]="inventory.GSTPercentage">
                             <mat-option [value]="0">All</mat-option>
                             <mat-option value="12">12%</mat-option>
@@ -215,9 +215,9 @@
                             <th>Unit Price</th>
                             <th>Discount</th>
                             <th>Sub Total</th>
-                            <th>GST Type</th>
-                            <th>GST%</th>
-                            <th>GST Amount</th>
+                            <th>TAX Type</th>
+                            <th>TAX%</th>
+                            <th>TAX Amount</th>
                             <th>Grand Total</th>
                             <th>Retail Per_Pc Price</th>
                             <th>Retail Total Price</th>
@@ -542,7 +542,7 @@
                       <!--  spec end -->
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
                         <mat-form-field class="example-full-width mb-0">
-                          <mat-label>GST Type</mat-label>
+                          <mat-label>TAX Type</mat-label>
                           <mat-select name="GSTType" [(ngModel)]="ProductExpiry.GSTType" #singleSelect>
                             <mat-option [value]="0">All</mat-option>
                             <mat-option [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}
@@ -552,7 +552,7 @@
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
                         <mat-form-field class="example-full-width mb-0">
-                          <mat-label>GSTPercentage</mat-label>
+                          <mat-label>TAX Percentage</mat-label>
                           <mat-select name="GSTPercentage" [(ngModel)]="ProductExpiry.GSTPercentage">
                             <mat-option [value]="0">All</mat-option>
                             <mat-option value="12">12%</mat-option>
@@ -590,9 +590,9 @@
                             <th>Unit Price</th>
                             <th>Discount</th>
                             <th>SubTotal</th>
-                            <th>GST%</th>
-                            <th>GSTAmount</th>
-                            <th>GSTType</th>
+                            <th>TAX%</th>
+                            <th>TAXAmount</th>
+                            <th>TAXType</th>
                             <th>GrandTotal</th>
                             <th>PaymentStatus</th>
                             <th>Retail Price</th>
@@ -666,7 +666,7 @@
 <!-- model -->
 <ng-template #content role="document" let-modal>
   <div class="modal-header" style="height: 50px;">
-    <h3 class="modal-title header pt-2" id="exampleModalLabel">GST Amount List</h3>
+    <h3 class="modal-title header pt-2" id="exampleModalLabel">TAX Amount List</h3>
     <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
@@ -674,8 +674,8 @@
       <table class="table table-striped table-hover table-sm table-bordered" style="border: 2px solid #fff !important;">
         <thead>
           <tr>
-            <th>GSTType</th>
-            <th>GSTAmount</th>
+            <th>TAXType</th>
+            <th>TAXAmount</th>
           </tr>
         </thead>
         <tbody>
@@ -698,7 +698,7 @@
 <!--ProductExpiry model -->
 <ng-template #content2 role="document" let-modal>
   <div class="modal-header" style="height: 50px;">
-    <h3 class="modal-title header pt-2" id="exampleModalLabel">GST Amount List</h3>
+    <h3 class="modal-title header pt-2" id="exampleModalLabel">TAX Amount List</h3>
     <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
@@ -706,8 +706,8 @@
       <table class="table table-striped table-hover table-sm table-bordered" style="border: 2px solid #fff !important;">
         <thead>
           <tr>
-            <th>GSTType</th>
-            <th>GSTAmount</th>
+            <th>TAXType</th>
+            <th>TAXAmount</th>
           </tr>
         </thead>
         <tbody>
